fix: Memory Card Game - Fixed animation - Fixed initializing of cards